Revision history for Perl extension Test::WWW::Selenium.

1.23 - Not yet released
  - 3 Patches from Tom Hukins++ to clean up inc/, pod and the license.

1.22 - Fri Apr  2 10:51:58 PDT 2010
  - Update URI::Encode dependency so we can depend on a consistent
    encoding of *firefox to %2Afirefox.
  - No code changes, just test fixes.

1.21 - Wed Dec 30 14:58:07 PST 2009
  - Add error_callback() patch from Derek Wueppelmann

1.20 - Mon Nov  2 22:13:47 PST 2009
  - Refactor timeout code so the UserAgent timeout is always long enough
  - Make set_timeout() also set the UserAgent timeout.

1.19 - Thu Sep 24 19:27:51 PDT 2009
  - Fixed test to not spew deprecation errors
  - removed t/test_ajax_jsf.t because the site it used went away

1.18 - Mon Aug 31 23:20:21 PDT 2009
  - Update list of commands that do not require a locator (barbie++)
  - Update Module::Install to 0.91
  - Ensure that do_command reuses LWP objects and caches 
    connections for performance (konobi++)
  - Minor POD touchups by (dandv++)

1.17 - Tue 30 Dec 2008 00:12:53 PST
 - Allow no_locator methods to be subclassable
   - Thanks to Michael Hendricks of Grant Street Group.

1.16 - Sun 14 Dec 2008 15:28:38 PST
 - use POST instead of GET to selenium server (gyrm)
 - add support for per-session javascript (gyrm)
 - add unit tests and docs for re-using session_ids
 - added LWP::UserAgent dependency to fix cpan testers failures

1.15 - Sun 23 Mar 2008 14:02:25 PDT
 - allow set_timeout() to be called before open()

1.14 - Tue Dec 11 12:45:34 PST 2007
 - fixed typo in Test::WWW::Selenium SYNOPSIS - thanks, Paul Puse
 - added missing dependency on URI::Escape - thanks, Peter (Stig) Edwards

1.13 - Wed Jun  6 19:52:18 PDT 2007
 - fix bug to allow directly calling do_command - Thanks, Tom Hukins
 - Changes from Kevin Jones at Socialtext:
   - refactored out how functions are created
   - add functions to more closely match Selenium IDE:
     - wait_for_text_present
     - wait_for_element_present, and