@@ -17,6 +17,7 @@
 package WWW::Selenium;
 use LWP::UserAgent;
 use HTTP::Request;
+use HTTP::Headers;
 use URI::Escape;
 use Carp qw(croak);
 use Time::HiRes qw(sleep);
@@ -404,6 +405,11 @@ goes out of scope and stop hasn't been called.
 Number of connections LWP should cache. This is just a minor speed
 improvement. Defaults to 5.
 
+=item * C<http_method>>
+
+Choose which HTTP method should be used for requests to the Selenium server.
+Only GET and POST are supported.
+
 =back
 
 =cut
@@ -417,9 +423,12 @@ sub new {
                  browser_start_command => delete $args{browser} || '*firefox',
                  _ua => undef,
                  keep_alive => 5,
+                 http_method => 'POST',
                  %args,
                };
     croak 'browser_url is mandatory!' unless $self->{browser_url};
+    croak "Unknown http_method: ($self->{http_method})"
+        unless $self->{http_method} =~ m/^GET|POST$/;
     bless $self, $class or die "Can't bless $class: $!";
     return $self;
 }
@@ -441,6 +450,7 @@ sub stop {
 
 sub do_command {
     my ($self, $command, @args) = @_;
+    my $get = $self->{http_method} eq 'GET';
 
     $self->{_page_opened} = 1 if $command eq 'open';
 
@@ -455,24 +465,31 @@ sub do_command {
     }
 
     $command = uri_escape($command);
-    my $fullurl = "http://$self->{host}:$self->{port}/selenium-server/driver/"
-                  . "\?cmd=$command";
+    my ($fullurl, $content) = ("http://$self->{host}:$self->{port}/selenium-server/driver/", '');
+
     my $i = 1;
     @args = grep defined, @args;
+    my $params = $get ? \$fullurl : \$content;
+    $$params .= "?cmd=$command";
     while (@args) {
-        $fullurl .= "&$i=" . URI::Escape::uri_escape_utf8(shift @args);
-        $i++;
+        $$params .= '&' . $i++ . '=' . URI::Escape::uri_escape_utf8(shift @args);
     }
     if (defined $self->{session_id}) {
-        $fullurl .= "&sessionId=$self->{session_id}";
+        $$params .= "&sessionId=$self->{session_id}";
     }
-    print "---> Requesting $fullurl\n" if $self->{verbose};
+    print "---> Requesting $fullurl ($content)\n" if $self->{verbose};
 
     # We use the full version of LWP to make sure we issue an 
     # HTTP 1.1 request (SRC-25)
     
-    my $ua = $self->ua;
-    my $response = $ua->request( HTTP::Request->new(GET => $fullurl) );
+    my $method = $get ? 'GET' : 'POST';
+    my $header = HTTP::Headers->new(
+        $get ? () : (
+            Content_Type => 'application/x-www-form-urlencoded; charset=utf-8'
+        )
+    );
+    my $response = $self->ua->request( 
+        HTTP::Request->new($method => $fullurl, $header, $content) );
     my $result;
     if ($response->is_success) {
         $result = $response->content;
@@ -3191,6 +3208,8 @@ sub remove_script {
 =item $sel-E<gt>use_xpath_library($library_name)
 
 Allows choice of one of the available libraries.
+
+=over
 
 $library_name is name of the desired library Only the following three can be chosen: 
 
