@@ -2,6 +2,8 @@ Revision history for Perl extension Test::WWW::Selenium.
 
 1.23 - Not yet released
   - 3 Patches from Tom Hukins++ to clean up inc/, pod and the license.
+  - Suggestion from So Matsui++ to restore HTTP POST from the 1.20 release.
+  - http_method now defaults to POST but can be set to GET.
 
 1.22 - Fri Apr  2 10:51:58 PDT 2010
   - Update URI::Encode dependency so we can depend on a consistent
